--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a name="hue" class="anchor" href="#hue"><span class="octicon octicon-link"></span></a>hue</h3>
+		  <a name="hue" class="anchor" href="#hue"><span class="octicon octicon-link"></span></a>hue</h3>
+		  <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
+		  <script src="term.js"></script>
+		  <script src="shell.js"></script>
         </article>
       </div>
     </div>
