--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
+  <script src="term.js"></script>
+  <script src="shell.js"></script>
 
   <title>tuogex</title>
   <meta name="description" content="tooplele">
@@ -17,48 +15,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
+<div class="owner">
 
-<body>
+<p><a href="https://github.com/tuogex" class="avatar"><img src="http://www.gravatar.com/avatar/0aeadad1eaa919a6a3580e53b2215b38.png" width="48" height="48"/></a>View <a href="https://github.com/tuogex">tuogex</a> on <a href="https://www.github.com">GitHub</a></p>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">tuogex</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">tooplele</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/tuogex" class="code">View tuogex on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-		  <a name="hue" class="anchor" href="#hue"><span class="octicon octicon-link"></span></a>hue</h3>
-		  <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
-		  <script src="term.js"></script>
-		  <script src="shell.js"></script>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/tuogex" class="avatar"><img src="https://0.gravatar.com/avatar/0aeadad1eaa919a6a3580e53b2215b38?d=https%3A%2F%2Fidenticons.github.com%2Fb0a815b82df3c157b6c2f30c0673fb5c.png&amp;s=30" width="48" height="48"/></a>View <a href="https://github.com/tuogex">tuogex</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/tuogex/tuogex.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/tuogex/tuogex.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+</div>
 </html>
