everything is different

--- a/index.html
+++ b/index.html
@@ -1,21 +1,8 @@
-<!doctype html>
-<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
-  <script src="term.js"></script>
-  <script src="shell.js"></script>
-
-  <title>tuogex</title>
-  <meta name="description" content="tooplele">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
-<div class="owner">
-
-<p><a href="https://github.com/tuogex" class="avatar"><img src="http://www.gravatar.com/avatar/0aeadad1eaa919a6a3580e53b2215b38.png" width="48" height="48"/></a>View <a href="https://github.com/tuogex">tuogex</a> on <a href="https://www.github.com">GitHub</a></p>
-
+<div class="walls">
+  <div class="floor"></div>
 </div>
-</html>
+<h3 class="inset">tuogex</h3>
+<a href="http://github.com/tuogex/"><span class="entypo-github" data-text="github"></span></a>
